log
Fri 12 Aug 2022 04:37:26 PM UTC: 
 tests:  0|7
total_score: 0/70
fa7a903
Fri 12 Aug 2022 04:47:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   15 |     c=a+b;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
7eff3ef
Fri 12 Aug 2022 04:47:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
0cbf8f0
Fri 12 Aug 2022 04:51:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: expected expression before ‘int’
   40 |     *suma=sumaN(int *a, int N)
      |                 ^~~
exercises.c:40:11: error: too few arguments to function ‘sumaN’
   40 |     *suma=sumaN(int *a, int N)
      |           ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
exercises.c:40:31: error: expected ‘;’ before ‘}’ token
   40 |     *suma=sumaN(int *a, int N)
      |                               ^
      |                               ;
   41 | }
      | ~                              
Compilation failed
3eb4c2c
Fri 12 Aug 2022 04:51:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: expected expression before ‘int’
   40 |     *suma=sumaN(int *a, int N);
      |                 ^~~
exercises.c:40:11: error: too few arguments to function ‘sumaN’
   40 |     *suma=sumaN(int *a, int N);
      |           ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
92faf1f
Fri 12 Aug 2022 04:54:47 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:112:9: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
  112 |   *c=(a1,a2)+(b1+b2);
      |         ^
exercises.c:112:6: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
  112 |   *c=(a1,a2)+(b1+b2);
      |      ^
cc1: all warnings being treated as errors
Compilation failed
3397057
